--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
                 <div class="nav-content">
                     <ul>
-                        <li class="toggle"></li>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Skills</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#skills">Skills</a></li>
                         <li><a href="#">Contact</a></li>
+                        <li class="toggle"></li>
                     </ul>
                 </div>
             </nav>
@@ -59,7 +59,7 @@
                 <p>I am Imrul Kayes. I am a simple , creative, enthusiastic and fun person.
                    I always like to create something on my own which is helpful for others.</p>
 
-                <p class="last-p">I have experience in HTML5, CSS3, and something Javascript.</p>
+                <p class="last-p">I have experience in HTML5, CSS3, something Javascript, and Github.</p>
                 <a href="#">Read More</a>
             </div>
             </div>
@@ -162,6 +162,8 @@
         </div>
     </section>
 
+
+
     <!-- DAY AND NIGHT JAVA SCRIPT -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
@@ -174,6 +176,15 @@
           })
       })
     </script>
+
+    <!-- Smoth Scroling -->
+
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"
+  ></script>
+  <script src="main.js"></script>
 
 </body>
 </html>
