--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <li><a href="#">Home</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#skills">Skills</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#contact">Contact</a></li>
                         <li class="toggle"></li>
                     </ul>
                 </div>
@@ -38,7 +38,7 @@
                 </h1>
 
                 <p>a web developer</p>
-                <a href=""><i class="fas fa-chevron-down"></i></a>
+                <a href="#about"><i class="fas fa-chevron-down"></i></a>
             </div>
             </div>
         </div>
@@ -162,7 +162,106 @@
         </div>
     </section>
 
+    <!-- My Some Project -->
 
+    <section id="projects">
+        <div class="container">
+            <div class="projects-header">
+                <h1>My SOME PROJECTS</h1>
+            </div>
+
+            <div class="projects-main-box">
+
+                <div class="projects-box">
+                    <img src="img/project-photo.jpg" alt="">
+                    <div class="projects-text">
+                        <h2>ZEET</h2>
+                        <a href="#">SHOW</a>
+                    </div>
+                </div>
+
+                <div class="projects-box">
+                    <img src="img/project-photo.jpg" alt="">
+                    <div class="projects-text">
+                        <h2>ZEET</h2>
+                        <a href="#">SHOW</a>
+                    </div>
+                </div>
+
+
+                <div class="projects-box">
+                    <img src="img/project-photo.jpg" alt="">
+                    <div class="projects-text">
+                        <h2>ZEET</h2>
+                        <a href="#">SHOW</a>
+                    </div>
+                </div>
+
+
+            </div>
+
+        </div>
+    </section>
+
+    <!-- Contact -->
+
+    <section id="contact">
+        <div class="contact-container">
+            <div class="contact-header">
+                <h1>Contact</h1>
+            </div>
+
+            <div class="contact-form">
+                <form>
+                    <div class="input">
+                        <input type="text" name="name" placeholder="Enter Your Name">
+                    </div>
+
+                    <div class="input">
+                        <input type="text" name="email" placeholder="Enter Your Email">
+                    </div>
+
+                    <div class="textarea">
+                        <textarea name="message" id="" cols="30" rows="10" placeholder="Write your messag---"></textarea>
+                    </div>
+
+                    <div class="submit">
+                        <input type="submit" value="Send Message">
+                    </div>
+                </form>
+            </div>
+
+            <div class="contact-address">
+
+                <div class="address">
+                    <i class="fa fa-map-marker"></i>
+                    <h3>ADDRESS / STREET</h3>
+                    <p>No 369, New Boston, USA</p>
+                </div>
+
+                <div class="address">
+                    <i class="fa fa-phone"></i>
+                    <h3>CONTACT NUMBER</h3>
+                    <p>+123 - 456 - 789</p>
+                </div>
+
+                <div class="address">
+                    <i class="fa fa-globe"></i>
+                    <h3>WEBSITE ADDRESS</h3>
+                    <p>www.yourwebsite.com</p>
+                </div>
+
+            </div>
+
+            <div class="social-media">
+                <a href=""><i class="fa fa-twitter"></i></a>
+                <a href=""><i class="fa fa-facebook-f"></i></a>
+                <a href=""><i class="fa fa-instagram"></i></a>
+                <a href=""><i class="fa fa-youtube"></i></a>
+            </div>
+
+        </div>
+    </section>
 
     <!-- DAY AND NIGHT JAVA SCRIPT -->
 
