--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     <section id="contact">
         <div class="contact-container">
             <div class="contact-header">
-                <h1>Contact</h1>
+                <h1>Con<span>tact</span></h1>
             </div>
 
             <div class="contact-form">
@@ -259,7 +259,7 @@
                     </div>
 
                     <div class="submit">
-                        <input type="submit" value="Send Message">
+                        <input type="submit" value="Send Message" class="send-message">
                     </div>
                 </form>
             </div>
